# Now10

./: .gitignore  Alimento.cpp  Alimento.h  CMakeLists.txt  README.md  clientesBase.txt  main.cpp  menuView.cpp  menuView.h
controller/: alimentoController.cpp  alimentoController.h  clienteController.cpp  clienteController.h
model/: Alimento.cpp  Alimento.h  Cliente.cpp  Cliente.h
view/: alimentoView.cpp  alimentoView.h  clienteView.cpp  clienteView.h  menuView.cpp  menuView.h
